# cse403-ai-coding

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  index.html  questions.md
backend/: GenAI-InputFile - ProjectPreferences.csv  assignment_solver.py  main.py  requirements.txt
frontend/: Cargo.toml  index.html  package-lock.json
frontend/.cargo/: config.toml
frontend/src/: App.jsx  app.rs  index.css  main.rs  solver.rs
src/: app.rs  csv_parser.rs  main.rs  solver.rs  worker.rs
