[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-file = "0.3"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "File", "FileList", "Event", "HtmlSelectElement"] }
js-sys = "0.3"
good_lp = { version = "1.9", features = ["microlp"] }
